Updated ClientCommunicator